--- a/sentilizer_client/src/css/queryform.css
+++ b/sentilizer_client/src/css/queryform.css
@@ -1,40 +1,39 @@
 .page-heading {
-    color:aqua
+  color: red;
 }
-.query-form-wrapper{
-    width: 50%;
-    margin: auto;
-    margin-top: 50px;
+.query-form-wrapper, .response-wrapper {
+  width: 50%;
+  margin: 0 auto;
+  margin-top: 50px;
 }
 
-.query-form-wrapper label{
-    color: aquamarine;
-
+.query-form-wrapper label {
+  color: #FFF;
 }
 .query-form-wrapper label,
 .query-form-wrapper textarea,
 .query-form-wrapper button {
-    width:100%; 
+  width: 100%;
 }
 .query-form-wrapper textarea {
-    min-height: 150px;
-    
+  min-height: 200px;
+  margin-top: 15px;
+}
+.query-form-wrapper button {
+  height: 40px;
+  margin-top: 30px;
+  border-radius: 5px;
+  background-color: #84C00C;
+  border: none;
 }
 
-.query-form-wrapper button{
-    height: 40px;
-    margin-top: 30px;
-    border-radius: 5px;
-    background-color: green;
-    border: none;
-    
-}
 .query-form-wrapper button:hover {
-    background-color: aquamarine;
+  background-color: #669509;
 }
+
 .query-form-wrapper button:disabled {
-    background-color: bisque;
+  background-color: #F5F5F5;
 }
-.response-text{
-    color: aquamarine;
+.response-wrapper {
+  background-color: #F5F5F5;
 }
